Bug 494281 (trunk only) - Touch panning no longer works as of 5/20/2009. r=jmathies, sr=vladimir